# hjkl

./: .gitignore  .gitmodules  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN-0.4.0.md  DESIGN_33_METHOD_CLASSIFICATION.md  MIGRATION.md  README.md  SECURITY.md  audit-buffer-methods.txt  bonsai.toml  deny.toml  release-plz.toml
apps/hjkl/: Cargo.toml  README.md  SCOPE-tree-sitter.md  SCOPE.md
apps/hjkl-gui/: Cargo.toml  README.md
apps/hjkl-gui/src/: main.rs
apps/hjkl/examples/: form_demo.rs
apps/hjkl/src/: app.rs  completion.rs  config.rs  config.toml  editorconfig.rs  embed.rs  git.rs  git_worker.rs  headless.rs  host.rs  hover_popup.rs  keymap_actions.rs  keymap_translate.rs  lang.rs  main.rs  menu.rs  nvim_api.rs  perf.rs  picker.rs  picker_action.rs  picker_git.rs  picker_sources.rs  render.rs  save.rs  start_screen.rs  syntax.rs  test_cwd.rs  theme.rs  which_key.rs
apps/hjkl/tests/: autopair.rs  comment_continuation.rs  e2e.rs  embed.rs  headless.rs  nvim_api.rs  recover_list.rs  smartindent_html.rs  tag_rename.rs
apps/hjkl/themes/: catppuccin.toml  dracula.toml  gruvbox.toml  nord.toml  onedark.toml  syntax-dark.toml  tokyonight.toml  ui-dark.toml
crates/hjkl-anvil/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  anvil.toml
crates/hjkl-anvil/src/: installer.rs  job.rs  lib.rs  manifest.rs  registry.rs  store.rs
crates/hjkl-anvil/tests/: install_tests.rs
crates/hjkl-app/: Cargo.toml  README.md
crates/hjkl-app/src/: config.rs  config.toml  diff.rs  filestate.rs  git.rs  git_worker.rs  keymap_actions.rs  lib.rs  modeline.rs  picker_git.rs  picker_sources.rs  swap.rs  trash.rs  undofile.rs
crates/hjkl-bonsai/: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
crates/hjkl-bonsai/src/: builtins.rs  comment_markers.rs  folds.rs  hex_color.rs  highlighter.rs  lib.rs  predicate.rs  query_sanitize.rs  rainbow.rs  rope_slice.rs
crates/hjkl-bonsai/tests/: edit_size_dispatch.rs  injection.rs  open_full_window_parsed.rs  scroll_no_reparse.rs  typing_subms.rs
crates/hjkl-bonsai/themes/: default-dark.toml  default-light.toml
crates/hjkl-bonsai/xtask/: Cargo.toml
crates/hjkl-buffer/: CHANGELOG.md  Cargo.toml  README.md
crates/hjkl-buffer-tui/: CHANGELOG.md  Cargo.toml  README.md
crates/hjkl-buffer-tui/src/: lib.rs  render.rs
crates/hjkl-buffer/benches/: budgets.rs
crates/hjkl-buffer/src/: buffer.rs  content.rs  edit.rs  engine_types.rs  folds.rs  geom.rs  lib.rs  listchars.rs  motion.rs  position.rs  render.rs  search.rs  span.rs  undo.rs  viewport.rs  wrap.rs
crates/hjkl-buffer/tests/: proptest_roundtrip.rs
crates/hjkl-compat-oracle/: COVERAGE.md  Cargo.toml  README.md
crates/hjkl-compat-oracle/corpus/: known_divergences.toml  nvim_api_tier.toml  sample.toml  tier1.toml  tier2_abbrev.toml  tier2_advanced.toml  tier2_autoindent_open.toml  tier2_bare_s_repeat.toml  tier2_block_textobj.toml  tier2_case_indent_join.toml  tier2_change_yank_objects.toml  tier2_count_open.toml  tier2_dot_repeat.toml  tier2_ex_delete.toml  tier2_ex_global.toml  tier2_ex_join.toml  tier2_ex_lineops.toml  tier2_ex_undo.toml  tier2_ex_yank.toml  tier2_fold_delete.toml  tier2_gaps.toml  tier2_gn.toml  tier2_incr_case.toml  tier2_increment_count.toml  tier2_indent_count.toml  tier2_indent_ops.toml  tier2_insert_ctrl_r.toml  tier2_jumps.toml  tier2_macros.toml  tier2_marks.toml  tier2_more_coverage.toml  tier2_motion_coverage.toml  tier2_op_search.toml  tier2_paragraph_word.toml  tier2_paste_family.toml  tier2_percent_motion.toml  tier2_reflow.toml  tier2_regex_magic.toml  tier2_registers.toml  tier2_registers_special.toml  (+30 more)
crates/hjkl-compat-oracle/src/: diff.rs  hjkl_driver.rs  lib.rs  nvim_driver.rs  test_host.rs
crates/hjkl-compat-oracle/tests/: loader.rs  oracle.rs
crates/hjkl-completion/: Cargo.toml  README.md
crates/hjkl-completion-tui/: Cargo.toml  README.md
crates/hjkl-completion-tui/src/: lib.rs
crates/hjkl-completion/src/: lib.rs
crates/hjkl-config/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
crates/hjkl-config/src/: error.rs  lib.rs  loader.rs  validate.rs  write.rs
crates/hjkl-config/tests/: integration.rs
crates/hjkl-css/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
crates/hjkl-css-gui/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
crates/hjkl-css-gui/src/: lib.rs
crates/hjkl-css/examples/: edge.rs
crates/hjkl-css/src/: ast.rs  error.rs  lib.rs  parse.rs  resolve.rs  value.rs
crates/hjkl-editor/: CHANGELOG.md  Cargo.toml  README.md
crates/hjkl-editor-gui/: Cargo.toml  README.md
crates/hjkl-editor-gui/src/: lib.rs
crates/hjkl-editor-tui/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
crates/hjkl-editor-tui/src/: form.rs  lib.rs  prompt.rs
crates/hjkl-editor/src/: ex.rs  lib.rs
crates/hjkl-editor/tests/: golden_ex.rs  vim_ex_integration.rs
crates/hjkl-engine/: CHANGELOG.md  Cargo.toml  README.md
crates/hjkl-engine-tui/: CHANGELOG.md  Cargo.toml  README.md
crates/hjkl-engine-tui/src/: lib.rs
crates/hjkl-engine-tui/tests/: editor_behavior.rs
crates/hjkl-engine/fuzz/: Cargo.toml
crates/hjkl-engine/src/: abbrev.rs  buf_helpers.rs  buffer_impl.rs  discipline.rs  editor.rs  input.rs  keymap_motion.rs  lib.rs  motions.rs  policy.rs  registers.rs  rope_util.rs  search.rs  selection_shift.rs  substitute.rs  tag.rs  types.rs  viewport_math.rs  vim.rs
crates/hjkl-engine/tests/: comment_and_filter_range.rs  cursor_screen_row_defensive.rs  fold_reveal.rs  fold_shift.rs  multi_cursor.rs  (+2 more)
crates/hjkl-ex/: CHANGELOG.md  Cargo.toml  README.md
crates/hjkl-form/: CHANGELOG.md  Cargo.toml  README.md
crates/hjkl-fs-watch/: Cargo.toml  README.md
crates/hjkl-fuzzy/: Cargo.toml  README.md
crates/hjkl-helix/: Cargo.toml  README.md
crates/hjkl-holler/: Cargo.toml  README.md
crates/hjkl-holler-tui/: Cargo.toml  README.md
crates/hjkl-hover/: Cargo.toml  README.md
crates/hjkl-hover-tui/: Cargo.toml  README.md
crates/hjkl-icons/: Cargo.toml  README.md
crates/hjkl-info-popup-tui/: Cargo.toml  README.md
(+570 files in other folders)
