[workspace]
resolver = "3"
members = ["crates/*", "apps/*"]

[workspace.package]
version = "0.35.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[workspace.dependencies]
hjkl-anvil = { path = "crates/hjkl-anvil", version = "0.35" }
hjkl-app = { path = "crates/hjkl-app", version = "0.35" }
hjkl-bonsai = { path = "crates/hjkl-bonsai", version = "0.35" }
hjkl-buffer = { path = "crates/hjkl-buffer", version = "0.35" }
hjkl-buffer-tui = { path = "crates/hjkl-buffer-tui", version = "0.35" }
hjkl-clipboard = { path = "crates/hjkl-clipboard", version = "0.35" }
hjkl-completion = { path = "crates/hjkl-completion", version = "0.35" }
hjkl-completion-tui = { path = "crates/hjkl-completion-tui", version = "0.35" }
hjkl-config = { path = "crates/hjkl-config", version = "0.35" }
hjkl-css = { path = "crates/hjkl-css", version = "0.35" }
hjkl-editor = { path = "crates/hjkl-editor", version = "0.35", default-features = false }
hjkl-editor-tui = { path = "crates/hjkl-editor-tui", version = "0.35", default-features = false }
hjkl-engine = { path = "crates/hjkl-engine", version = "0.35", default-features = false }
hjkl-engine-tui = { path = "crates/hjkl-engine-tui", version = "0.35" }
hjkl-ex = { path = "crates/hjkl-ex", version = "0.35" }
hjkl-form = { path = "crates/hjkl-form", version = "0.35" }
hjkl-fs-watch = { path = "crates/hjkl-fs-watch", version = "0.35" }
hjkl-fuzzy = { path = "crates/hjkl-fuzzy", version = "0.35" }
hjkl-holler = { path = "crates/hjkl-holler", version = "0.35" }
hjkl-holler-tui = { path = "crates/hjkl-holler-tui", version = "0.35" }
hjkl-hover = { path = "crates/hjkl-hover", version = "0.35" }
hjkl-hover-tui = { path = "crates/hjkl-hover-tui", version = "0.35" }
hjkl-icons = { path = "crates/hjkl-icons", version = "0.35" }
hjkl-info-popup = { path = "crates/hjkl-info-popup", version = "0.35" }
hjkl-info-popup-tui = { path = "crates/hjkl-info-popup-tui", version = "0.35" }
hjkl-keymap = { path = "crates/hjkl-keymap", version = "0.35", default-features = false }
hjkl-keymap-tui = { path = "crates/hjkl-keymap-tui", version = "0.35" }
hjkl-kitty = { path = "crates/hjkl-kitty", version = "0.35" }
hjkl-lang = { path = "crates/hjkl-lang", version = "0.35" }
hjkl-layout = { path = "crates/hjkl-layout", version = "0.35" }
hjkl-lsp = { path = "crates/hjkl-lsp", version = "0.35" }
hjkl-mangler = { path = "crates/hjkl-mangler", version = "0.35" }
hjkl-markdown = { path = "crates/hjkl-markdown", version = "0.35" }
hjkl-markdown-tui = { path = "crates/hjkl-markdown-tui", version = "0.35" }
hjkl-menu = { path = "crates/hjkl-menu", version = "0.35" }
hjkl-menu-tui = { path = "crates/hjkl-menu-tui", version = "0.35" }
hjkl-picker = { path = "crates/hjkl-picker", version = "0.35" }
hjkl-quickfix = { path = "crates/hjkl-quickfix", version = "0.35" }
hjkl-picker-tui = { path = "crates/hjkl-picker-tui", version = "0.35" }
hjkl-prompt = { path = "crates/hjkl-prompt", version = "0.35" }
hjkl-prompt-tui = { path = "crates/hjkl-prompt-tui", version = "0.35" }
hjkl-splash = { path = "crates/hjkl-splash", version = "0.35" }
hjkl-splash-tui = { path = "crates/hjkl-splash-tui", version = "0.35" }
hjkl-statusline = { path = "crates/hjkl-statusline", version = "0.35" }
hjkl-statusline-tui = { path = "crates/hjkl-statusline-tui", version = "0.35" }
hjkl-syntax = { path = "crates/hjkl-syntax", version = "0.35" }
hjkl-syntax-tui = { path = "crates/hjkl-syntax-tui", version = "0.35" }
hjkl-tabs = { path = "crates/hjkl-tabs", version = "0.35" }
hjkl-tabs-tui = { path = "crates/hjkl-tabs-tui", version = "0.35" }
hjkl-theme = { path = "crates/hjkl-theme", version = "0.35" }
hjkl-theme-tui = { path = "crates/hjkl-theme-tui", version = "0.35" }
hjkl-vim = { path = "crates/hjkl-vim", version = "0.35", default-features = false }
hjkl-vim-types = { path = "crates/hjkl-vim-types", version = "0.35" }
hjkl-vim-tui = { path = "crates/hjkl-vim-tui", version = "0.35" }
hjkl-which-key = { path = "crates/hjkl-which-key", version = "0.35" }
hjkl-which-key-tui = { path = "crates/hjkl-which-key-tui", version = "0.35" }
hjkl-xdg = { path = "crates/hjkl-xdg", version = "0.35" }
unicode-width = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
