[package]
name = "hjkl-gui"
description = "Vim-modal floem GUI editor built on the hjkl engine."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "hjkl-gui"
path = "src/main.rs"

[dependencies]
hjkl-app = "0.3"
hjkl-editor-gui = "0.2"
hjkl-editor     = { version = "0.8", default-features = false }
hjkl-engine     = { version = "0.11", default-features = false }
hjkl-buffer     = "0.7"
hjkl-vim        = { version = "0.22", default-features = false }
clap            = { version = "4", features = ["derive"] }
floem           = "0.2"
