[package]
name = "hjkl-gui"
description = "Vim-modal floem GUI editor built on the hjkl engine."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "hjkl-gui"
path = "src/main.rs"

[dependencies]
hjkl-app.workspace = true
hjkl-editor-gui.workspace = true
hjkl-editor.workspace = true
hjkl-engine.workspace = true
hjkl-buffer.workspace = true
hjkl-vim.workspace = true
clap            = { version = "4", features = ["derive"] }
floem           = "0.2"
