[package]
name = "hjkl"
description = "Vim-modal terminal editor: standalone TUI built on the hjkl engine."
keywords = ["vim", "modal", "editor", "tui", "ratatui"]
categories = ["text-editors", "command-line-utilities"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"

[[bin]]
name = "hjkl"
path = "src/main.rs"

[dependencies]
hjkl-layout.workspace = true
hjkl-holler.workspace = true
hjkl-holler-tui.workspace = true
hjkl-tabs.workspace = true
hjkl-tabs-tui.workspace = true
hjkl-app.workspace = true
hjkl-info-popup.workspace = true
hjkl-info-popup-tui.workspace = true
hjkl-prompt.workspace = true
hjkl-prompt-tui.workspace = true
hjkl-markdown-tui.workspace = true
hjkl-hover.workspace = true
hjkl-hover-tui.workspace = true
hjkl-anvil.workspace = true
hjkl-keymap.workspace = true
hjkl-keymap-tui.workspace = true
hjkl-vim.workspace = true
hjkl-vim-tui.workspace = true
hjkl-lsp.workspace = true
hjkl-buffer.workspace = true
hjkl-buffer-tui.workspace = true
hjkl-splash.workspace = true
hjkl-splash-tui.workspace = true
hjkl-engine.workspace = true
hjkl-engine-tui.workspace = true
hjkl-editor = { workspace = true, features = ["ratatui"] }
hjkl-ex.workspace = true
hjkl-editor-tui.workspace = true
hjkl-statusline.workspace = true
hjkl-statusline-tui.workspace = true
hjkl-which-key.workspace = true
hjkl-which-key-tui.workspace = true
hjkl-completion.workspace = true
hjkl-completion-tui.workspace = true
hjkl-lang.workspace = true
hjkl-bonsai.workspace = true
hjkl-theme.workspace = true
hjkl-clipboard.workspace = true
hjkl-form.workspace = true
hjkl-picker.workspace = true
hjkl-picker-tui.workspace = true
hjkl-config.workspace = true
hjkl-mangler.workspace = true
hjkl-menu.workspace = true
hjkl-menu-tui.workspace = true
hjkl-syntax.workspace = true
hjkl-syntax-tui.workspace = true
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
regex = "1"
git2 = { version = "0.21", default-features = false }
toml = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lsp-types = "0.97"
url = "2"
rmpv = { version = "1", features = ["with-serde"] }
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
nvim-rs = { version = "0.9", features = ["use_tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util"] }
async-trait = "0.1"
portable-pty = "0.9"
vt100 = "0.16"

[[example]]
name = "form_demo"
path = "examples/form_demo.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.{ archive-format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.deb]
maintainer = "mxaddict <mxaddict@kryptic.sh>"
copyright = "2026, mxaddict <mxaddict@kryptic.sh>"
license-file = ["../../LICENSE", "0"]
extended-description = """\
hjkl is a vim-modal terminal text editor built on the hjkl engine — \
a rope-backed buffer, vim FSM, motion grammar, ex commands, fuzzy \
picker, and tree-sitter highlighting, all running in your terminal."""
section = "editors"
priority = "optional"
assets = [
    ["target/release/hjkl", "/usr/bin/hjkl", "755"],
    ["README.md", "/usr/share/doc/hjkl/README.md", "644"],
    ["../../LICENSE", "/usr/share/doc/hjkl/copyright", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/hjkl", dest = "/usr/bin/hjkl", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/hjkl/README.md", mode = "644", doc = true },
    { source = "../../LICENSE", dest = "/usr/share/licenses/hjkl/LICENSE", mode = "644" },
]
# Group is largely ignored by modern dnf but keeps rpmlint quiet.
group = "Applications/Editors"
