[package]
name = "hjkl-anvil"
description = "Mason-style LSP and developer-tool installer"
keywords = ["lsp", "installer", "tools", "mason"]
categories = ["development-tools", "filesystem"]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl-anvil"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"

[dependencies]
hjkl-xdg = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
