[package]
name = "hjkl-anvil"
description = "Mason-style LSP and developer-tool installer"
keywords = ["lsp", "installer", "tools", "mason"]
categories = ["development-tools", "filesystem"]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl-anvil"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"

# The `sync` feature is dev-only; it gates the `sync-anvil` xtask binary and
# pulls in reqwest/zip/serde_json which are not needed by downstream consumers.
[features]
default = []
sync = ["dep:anyhow", "dep:clap", "dep:reqwest", "dep:zip", "dep:serde_json"]

[[bin]]
name = "sync-anvil"
path = "src/bin/sync_anvil.rs"
required-features = ["sync"]

[dependencies]
hjkl-xdg = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
thiserror = "2"
# sync-feature deps (not pulled for normal consumers)
anyhow = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
reqwest = { version = "0.12", optional = true, features = ["blocking", "rustls-tls"], default-features = false }
serde_json = { version = "1", optional = true }
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
