[package]
name = "hjkl-anvil"
description = "Mason-style LSP and developer-tool installer"
keywords = ["lsp", "installer", "tools", "mason"]
categories = ["development-tools", "filesystem"]
version = "0.2.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl-anvil"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"

# The `sync` feature is dev-only; it gates the `sync-anvil` xtask binary and
# pulls in serde_json which is not needed by downstream consumers.
# reqwest and zip are now always included (needed by the install pipeline at runtime).
[features]
default = []
sync = ["dep:anyhow", "dep:clap", "dep:serde_json"]

[[bin]]
name = "sync-anvil"
path = "src/bin/sync_anvil.rs"
required-features = ["sync"]

[dependencies]
hjkl-xdg = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
thiserror = "2"
# install-pipeline deps (always present — needed at runtime by downstream consumers)
reqwest = { version = "0.13", features = ["blocking", "rustls", "rustls-native-certs"], default-features = false }
flate2 = "1"
tar = "0.4"
zip = { version = "8", default-features = false, features = ["deflate"] }
sha2 = "0.11"
hex = "0.4"
crossbeam-channel = "0.5"
# sync-feature deps (xtask-only)
anyhow = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
