[package]
name = "hjkl-app"
description = "Host-agnostic application layer for the hjkl editor. Used by apps/hjkl (TUI) and apps/hjkl-gui (GUI)."
keywords = ["editor", "tui", "gui"]
categories = ["text-editors"]
version.workspace = true
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
ec4rs = "1"
git2 = { version = "0.20", default-features = false }
hjkl-anvil.workspace = true
hjkl-buffer.workspace = true
hjkl-config.workspace = true
hjkl-engine.workspace = true
hjkl-keymap.workspace = true
hjkl-lsp.workspace = true
hjkl-picker.workspace = true
hjkl-vim.workspace = true
serde = { version = "1", features = ["derive"] }
toml = "1.1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
