[package]
name = "hjkl-bonsai"
description = "Tree-sitter grammar registry + highlighter for the hjkl editor stack"
keywords = ["tree-sitter", "syntax-highlighting", "editor", "vim", "tui"]
categories = ["text-editors", "parsing"]
version.workspace = true
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl-bonsai"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[dependencies]
hjkl-xdg.workspace = true
hjkl-theme.workspace = true
ropey = "1.6"
tree-sitter = "0.26"
tree-sitter-language = "0.1"
libmimalloc-sys = { version = "0.1", default-features = false }
toml = "1.1"
serde = { version = "1", features = ["derive"] }
ahash = { version = "0.8", default-features = false, features = ["std"] }
anyhow = "1"
thiserror = "2"
libloading = "0.9"
dirs = "6"
tracing = "0.1"
regex = "1"
memchr = "2"

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
