[package]
name = "hjkl-buffer-tui"
description = "Ratatui Widget adapter for hjkl-buffer — single-pass cell renderer for BufferView."
keywords = ["ratatui", "buffer", "tui", "editor", "widget"]
categories = ["text-editors", "command-line-interface"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version = "1.95"
readme = "README.md"

[dependencies]
hjkl-buffer.workspace = true
ratatui = "0.30"
regex = "1"
unicode-width = "0.2"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
