[package]
name = "hjkl-compat-oracle"
description = "Headless neovim diff harness for vim-compatibility regression testing."
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
hjkl-buffer = { path = "../hjkl-buffer" }
hjkl-engine = { path = "../hjkl-engine" }
nvim-rs = { version = "0.9", features = ["use_tokio"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "process", "macros"] }
toml = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
