[package]
name = "hjkl-completion-tui"
description = "Ratatui adapter for hjkl-app completion: paints the completion popup model into a ratatui Frame."
keywords = ["vim", "completion", "tui", "ratatui", "editor"]
categories = ["text-editors", "command-line-interface"]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[dependencies]
hjkl-app = "0.4"
hjkl-theme = "0.2"
ratatui = "0.30"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
