[package]
name = "hjkl-completion"
description = "Completion popup data model for the hjkl editor stack: Completion, CompletionItem, CompletionKind, and LSP conversion helpers."
keywords = ["completion", "lsp", "editor", "popup"]
categories = ["text-editors"]
version.workspace = true
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[dependencies]
lsp-types = "0.97"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
