[package]
name = "hjkl-config"
description = "Shared TOML config loader for hjkl-based apps — XDG path resolution, span-aware parse errors, optional validation hook."
keywords = ["config", "toml", "xdg", "vim", "hjkl"]
categories = ["config", "filesystem"]
version.workspace = true
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl"
homepage = "https://hjkl.kryptic.sh"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "6"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
