[package]
name = "hjkl-css-gui"
version.workspace = true
edition.workspace = true
description = "Adapter that maps a hjkl-css Stylesheet onto floem View styling via an extension trait."
license.workspace = true
repository.workspace = true
keywords = ["css", "style", "floem", "ui"]
categories = ["gui"]
authors.workspace = true
rust-version = "1.95"

[dependencies]
hjkl-css = { workspace = true }
floem = "0.2"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
