[package]
name = "hjkl-css"
version.workspace = true
edition.workspace = true
description = "Parser + AST for a CSS subset used to drive declarative UI styling. Toolkit-agnostic; pair with hjkl-css-floem for floem bindings."
license.workspace = true
repository.workspace = true
keywords = ["css", "style", "ui", "parser"]
categories = ["parser-implementations", "gui"]
authors.workspace = true
rust-version = "1.95"

[dependencies]
cssparser = "0.37"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
